fix AudioTestFileDownloader